--- a/index.html
+++ b/index.html
@@ -2,38 +2,146 @@
 <html lang="en">
 
 <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Rohit-Portfolio</title>
-      <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+    <!-- boxicon icons -->
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <!-- devicon icons -->
+    <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
+    <!-- scroll animation -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
+
 </head>
 
 <body>
-      <header class="header">
-            <a href="#">Rohit</a>
-            <nav class="nav-bar">
-                  <a href="">Home</a>
-                  <a href="">Projects</a>
-                  <a href="">Skills</a>
-                  <a href="">About</a>
-                  <a href="">Contact</a>
-            </nav>
+    <header class="header">
+        <nav class="navbar">
+            <a href="#" class="logo">Portfolio</a>
+            <ul>
+                <li><a href="#home" class="nav-link">Home</a></li>
+                <li><a href="#about" class="nav-link">About</a></li>
+                <li><a href="#projects" class="nav-link">Projects</a></li>
+                <li><a href="#contact" class="nav-link">Contact</a></li>
+            </ul>
+        </nav>
 
-      </header>
-      <section class="home">
-            <h1>Hi, It's me <span>Rohit</span></h1>
-            <h2>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus officia tempore sunt cumque repellat, earum sit sed nobis iusto architecto!</h2>
-      </section>
-      <section class="projects">
-            <h2>Projects</h2>
+    </header>
+    <div class="bars-animation">
+        <div class="bar" style="--i:6;"></div>
+        <div class="bar" style="--i:5;"></div>
+        <div class="bar" style="--i:4;"></div>
+        <div class="bar" style="--i:3;"></div>
+        <div class="bar" style="--i:2;"></div>
+        <div class="bar" style="--i:1;"></div>
+    </div>
+    <main>
+        <section class="home" id="home">
+            <div class="home-info">
+                <h1>Rohit Sagar</h1>
+                <h2>I am
+                    <span style="--i:2;" data-text="Web Developer">Web Developer</span>
+                    <span style="--i:1;" data-text="Software Developer">Software Developer</span>
+                </h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis animi fuga ad ea, quod modi harum
+                    ut velit expedita. Fugit deserunt ad provident rerum pariatur dolor. Dolor ipsum voluptatum iusto
+                    excepturi quae tenetur.</p>
+                <div class="btn-sci">
+                    <a href="#" class="btn">Downlaod CV</a>
 
-      </section>
-      <section class="skills">
-            <h2>My Skills</h2>
-      </section>
-      
+                    <div class="sci">
+                        <a href="#"><i class='bx bxl-github'></i></a>
+                        <a href="#"><i class='bx bxl-linkedin'></i></a>
+                        <a href="#"><i class='bx bxl-twitter'></i></a>
+                        <a href="#"><i class='bx bxl-instagram'></i></a>
 
-      <script src="script.js"></script>
+                    </div>
+                </div>
+            </div>
+
+            <div class="home-img">
+                <div class="img-box">
+                    <div class="img-item">
+                        <img src="/assets/home.png" alt="Image">
+                    </div>
+
+                </div>
+            </div>
+
+        </section>
+        <section class="about" id="about">
+            <h2>About <span>Me</span></h2>
+            <div class="about-me">
+                <h3>Introduction</h3>
+                <p class="bio">hello, I amLorem ipsum dolor sit, amet consectetur adipisicing elit. Ab dignissimos
+                    recusandae numquam eaque esse aut illo doloribus et facilis natus, beatae distinctio quo! Error
+                    obcaecati corrupti eligendi officia deserunt architecto.</p>
+            </div>
+            </div>
+        </section>
+        <section class="projects" id="projects">
+            <h2><span>My</span> Projects</h2>
+            <!-- <p class="pp">most recent projects i have worked on</p> -->
+            <div class="project-grid">
+                <div class="project-card" style="--i:1;">
+                    <div class="info-cont">
+
+                        <img src="/assets/project.png" alt="Project Screenshot">
+                        <h3>Weather App</h3>
+                        <p>A simple weather app using HTML, CSS, and JS. Fetches real-time data from OpenWeather API.
+                        </p>
+                        <a class="btn" href="https://yourproject.netlify.app" target="_blank">Live Demo</a>
+                        <a class="btn" href="https://github.com/rohit/project-repo" target="_blank">GitHub</a>
+                    </div>
+                </div>
+                <div class="project-card" style="--i:3;">
+                    <div class="info-cont">
+
+                        <img src="/assets/project.png" alt="Project Screenshot">
+                        <h3>Weather App</h3>
+                        <p>A simple weather app using HTML, CSS, and JS. Fetches real-time data from OpenWeather API.
+                        </p>
+                        <a class="btn" href="https://yourproject.netlify.app" target="_blank">Live Demo</a>
+                        <a class="btn" href="https://github.com/rohit/project-repo" target="_blank">GitHub</a>
+                    </div>
+                </div>
+                <div class="project-card" style="--i:2;">
+                    <div class="info-cont">
+
+                        <img src="/assets/project.png" alt="Project Screenshot">
+                        <h3>Weather App</h3>
+                        <p>A simple weather app using HTML, CSS, and JS. Fetches real-time data from OpenWeather API.
+                        </p>
+                        <a class="btn" href="https://yourproject.netlify.app" target="_blank">Live Demo</a>
+                        <a class="btn" href="https://github.com/rohit/project-repo" target="_blank">GitHub</a>
+                    </div>
+                </div>
+
+            </div>
+
+        </section>
+        <section class="contact" id="contact">
+            <h2><span>Contact</span> Me</h2>
+            <p>Feel free to reach out for collaborations or just a friendly hello 👋</p>
+            <div class="contact-form-div">
+
+                <form class="contact-form">
+                    <input type="text" placeholder="Your Name" required>
+                    <input type="email" placeholder="Your Email" required>
+                    <textarea rows="6" placeholder="Your Message" required></textarea>
+                    <button type="submit" class="btn">Send Message</button>
+                </form>
+            </div>
+        </section>
+
+    </main>
+
+
+    </script>
+
 
 </body>
 
